# spackbot

./: .dockerignore  .env-dummy  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  redeploy-spackbot-dev.sh  requirements.txt  server.rb
.github/workflows/: build-deploy.yaml  main.yml
docs/: index.html
docs/assets/css/: style.css
docs/docs/: README.md  frequently-asked-questions.md  index.html  sidebar.md  support.md
docs/docs/developer-guide/: developer-guide.md  docker-compose.md  docker.md  install.md
docs/docs/user-guide/: user-guide.md
smee/: Dockerfile  entrypoint.sh
spackbot/: __main__.py  auth.py  comments.py  helpers.py  pr_add_comments.py  pr_add_labels.py  pr_add_reviewers.py  pr_check_style.py  pr_checks.py  pr_run_pipeline.py  routes.py  workers.py
spackbot/.github/workflows/: black.yml
spackbot/handlers/: __init__.py  backport.py  gitlab.py  labels.py  mirrors.py  packages.py  pipelines.py  reviewers.py  style.py
workers/: Dockerfile  entrypoint.sh  install_aws.sh  requirements.txt  style-requirements.txt
